--- a/public/documentation.html
+++ b/public/documentation.html
@@ -26,27 +26,34 @@
             <td>/movies</td>
             <td>GET</td>
             <td>Returns a JSON list of movies.</td>
-            <td>Blade, The Matrix, The Shawshank Redemption'</td>
+            <td>Blade, The Matrix, The Shawshank Redemption</td>
         </tr>
         <tr>
             <td>Get data about a movie from title</td>
-            <td>/movies/:title</td>
+            <td>/movies/:Title</td>
             <td>GET</td>
             <td>Returns a JSON data about a specific movie.</td>
             <td>Genre: Sci Fi <br>
             Name: Blade<br>
             Description: Sci-Fi is a genre of film that is not real. <br>
             Director: Alien themself<br>
-            Name: XYZ <br>
-            Bio: XYZ  was born in galaxy....<br>
-            Birth: unknown<br>
             Actors: [many many]<br>
             ID: 83748297ß5u3nröi31zuf8931<br>
             </td>
         </tr>
         <tr>
+            <td>Get data about a genre</td>
+            <td>/genres/:genre</td>
+            <td>GET</td>
+            <td>Returns a JSON data about a genre</td>
+            <td>"Name": "Action",
+                "Description": "Action film is a film genre in which the protagonist or protagonists are thrust into a series of events that typically include violence, extended fighting, physical feats, rescues and frantic chases."
+                <br>
+            </td>
+        </tr>
+        <tr>
             <td>Get data about a director</td>
-            <td>/directors/:name</td>
+            <td>/director/:directorName</td>
             <td>GET</td>
             <td>Returns a JSON data about director.</td>
             <td>Director: Alien themself<br>
@@ -66,14 +73,14 @@
         </tr>
         <tr>
             <td>Add new movie to list of favorite</td>
-            <td>/users/:username/movies/:movieID</td>
+            <td>/users/:Username/movies/:MovieID</td>
             <td>POST</td>
             <td>Returns a text confirming which movie was added successfully.</td>
             <td>A text message indicating the title of the movie that was added</td>
         </tr>
         <tr>
             <td>Allow users to update their user information</td>
-            <td>/users/:username</td>
+            <td>/users/:Username</td>
             <td>PUT</td>
             <td>Returns the data fields that was updated by the user.</td>
             <td>userName: NewName, <br>
@@ -83,15 +90,15 @@
         </tr>
         <tr>
             <td>Delete the user</td>
-            <td>/users/:username</td>
+            <td>/users/:Username</td>
             <td>DELETE</td>
             <td>Return a text confirming that the user was deleted.</td>
-            <td> Enter usersName</td>
+            <td>user2 was deleted</td>
         </tr>
         
         <tr>
             <td>Delete movie from list of favorite</td>
-            <td>/users/:username/movies/:movieID</td>
+            <td>/users/:Username/movies/:MovieID</td>
             <td>DELETE</td>
             <td>Returns a text confirming which movie was removed successfully.</td>
             <td>A text message indicating the title of the movie that was deleted</td>
