--- a/public/documentation.html
+++ b/public/documentation.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>myFlix</title>
+    <title>MyFlix</title>
 </head>
 <body>
-    <h1>my Flix</h1>
+    <h1>My Flix</h1>
     <p>To build the server-side component of a “movies” web application. The web
         application will provide users with access to information about different
         movies, directors, and genres. Users will be able to sign up, update their
