--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>myFlix</title>
 </head>
 <body>
-    <p>testing yes yes i am here</p>
+    <p>testing yes yes i am here !</p>
     
 </body>
 </html>
